--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,9 @@
 name: flutter_chat_demo
 description: This is the demo for chat app by Flutter
+version: 1.0.1+1
+
+environment:
+  sdk: '>=2.10.0 <3.0.0'
 
 dependencies:
   flutter:
